deploy/k8s/webapp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: demo
  labels:
    app: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
