deploy/k8s/webapp/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: webapp
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: webapp
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
    - webapp
  http:
    - route:
        - destination:
            host: webapp.demo.svc.cluster.local
            port:
              number: 80
